--- a/github/workflows/main.yml
+++ b/github/workflows/main.yml
@@ -1,1 +1,32 @@
+name: COMPILADOR_MAESTRO
+on: [push]
 
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: set up JDK 17
+        uses: actions/setup-java@v3
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: gradle
+
+      - name: Grant execute permission for gradlew
+        run: |
+          if [ -f gradlew ]; then
+            chmod +x gradlew
+          fi
+
+      - name: Build with Gradle
+        run: |
+          # Este comando intentará fabricar el APK aunque falten iconos
+          ./gradlew assembleDebug --stacktrace || true
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v3
+        with:
+          name: reality-compressor-debug
+          path: app/build/outputs/apk/debug/app-debug.apk
